force-app/main/default/objects/Contact/fields/Associated_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Associated_Contacts__c</fullName>
    <label>Associated Contacts</label>
    <length>50</length>
    <type>Text</type>
</CustomField>