force-app/main/default/objects/Contact/fields/Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Job_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Application</label>
    <referenceTo>Job_Applications__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>