force-app/main/default/objects/Contact/fields/Job_Application_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Job_Application_Contacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for Contact to Job Application</description>
    <label>Job Application Contacts</label>
    <referenceTo>Job_Applications__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>